@@ -22,28 +22,66 @@ computeSecondOrder : bool, defaults to False
 Notes
 -----
 Sensitivity algorithms rely on the definition of specific designs.
-The method generates design for the Saltelli method.
-Such designs can be used for Jansen, Martinez and MauntzKucherenko methods.
-This precomputes such input designs using distribution or experiment by
-generating a sample of twice the dimension by duplicating the distribution
-into a :math:`2d` distribution with repeated marginals, in order to also work
-with non-iid samples such as those generated by :class:`~openturns.LHSExperiment`
-or :class:`~openturns.LowDiscrepancyExperiment`. The sampling is done according
-to the given experiment, then it is split into samples :math:`A` and :math:`B`
-and the columns of these ones are mixed to define the huge sample (design).
-If *computeSecondOrder* is set to *False*, the result design is of size
-:math:`N(d+2)` where :math:`d` is the dimension of the distribution.
-If *computeSecondOrder* is set to *True*, the design size is :math:`N(2d+2)`, see
-[saltelli2002]_, excepted in dimension 2.
-If the constructor based on the distribution is used, an experiment is built
-according to the value of 'SobolIndicesExperiment-SamplingMethod' in :class:`~openturns.ResourceMap`:
 
-    - If it is equal to 'LHS', a :class:`~openturns.LHSExperiment` is used, with *AlwaysShuffle* and *RandomShift* set to *True*
-    - If it is equal to 'QMC' and :math:`d\leq SobolSequence.MaximumNumberOfDimension`, a :class:`~openturns.LowDiscrepancyExperiment` is used in conjunction with :class:`~openturns.SobolSequence`, with *Randomize* set to *False*. If :math:`d` is too large, it falls back to the 'LHS' case.
-    - Otherwise a :class:`~openturns.MonteCarloExperiment` is used. It is the default choice in order to allow :class:`~openturns.SobolIndicesAlgorithm` to use the asymptotic distribution of the indices estimates.
+The :meth:`generate` method of this class produces a :class:`~openturns.Sample`
+to be supplied to the contructor of one of the :class:`~openturns.SobolIndicesAlgorithm` implementations:
 
-The corresponding output values of a model can be evaluated outside of the
-platform.
+- :class:`~openturns.SaltelliSensitivityAlgorithm`,
+- :class:`~openturns.MartinezSensitivityAlgorithm`,
+- :class:`~openturns.MauntzKucherenkoSensitivityAlgorithm`,
+- :class:`~openturns.JansenSensitivityAlgorithm`.
+
+The chosen :class:`~openturns.SobolIndicesAlgorithm` implementation then uses the sample as *input design*,
+which means it represents (but is not a realization of) a random vector :math:`\vect{X} = \left( X^1, \ldots, X^{n_X} \right)`.
+
+Either the :class:`~openturns.Distribution` of :math:`\vect{X}`
+or a :class:`~openturns.WeightedExperiment` that represents it
+must be supplied to the class constructor.
+
+If a :class:`~openturns.WeightedExperiment` is supplied, the class uses it directly.
+
+If the distribution of :math:`\vect{X}` is supplied, the class generates a :class:`~openturns.WeightedExperiment`.
+To do this, it duplicates the distribution: every marginal is repeated once to produce
+a :math:`2 n_X`-dimensional distribution.
+This trick makes it possible to choose a :class:`~openturns.WeightedExperiment` with non-iid samples
+(that is a :class:`~openturns.LHSExperiment` or a :class:`~openturns.LowDiscrepancyExperiment`)
+to represent the original :math:`n_X`-dimensional distribution.
+
+The type of :class:`~openturns.WeightedExperiment` depends on the value of ``'SobolIndicesExperiment-SamplingMethod'`` in the :class:`~openturns.ResourceMap`:
+
+    - ``'MonteCarlo'`` for a :class:`~openturns.MonteCarloExperiment`.
+    - ``'LHS'`` for an :class:`~openturns.LHSExperiment` with *alwaysShuffle* and *randomShift* set to *True*.
+    - ``'QMC'`` for a :class:`~openturns.LowDiscrepancyExperiment` (with *randomize* flag set to *False*) built from a :class:`~openturns.SobolSequence`.
+
+``'MonteCarlo'`` is the default choice because it allows the chosen :class:`~openturns.SobolIndicesAlgorithm` implementation to use the asymptotic distribution of the estimators of the Sobol' indices.
+
+Note that ``'QMC'`` is only possible if :math:`2 n_X \leqslant` :class:`~openturns.SobolSequence`:code:`.`:attr:`~openturns.SobolSequence.MaximumNumberOfDimension`.
+If ``'QMC'`` is specified but :math:`2 n_X >` :class:`~openturns.SobolSequence`:code:`.`:attr:`~openturns.SobolSequence.MaximumNumberOfDimension`, the class falls back to ``'LHS'``.
+
+>>> from openturns import SobolSequence
+>>> print(SobolSequence.MaximumNumberOfDimension)
+1111
+
+Regardless of the type of :class:`~openturns.WeightedExperiment`,
+the class splits it into two samples with the same size :math:`N`:
+:math:`\mat{A}` and :math:`\mat{B}`.
+Their columns are mixed in order to produce a very large sample: the *inputDesign* argument
+taken by one of the constructors of every :class:`~openturns.SobolIndicesAlgorithm` implementation.
+
+If *computeSecondOrder* is set to *False*, the input design is of size :math:`N(2+n_X)`.
+The first :math:`N` rows contain the sample :math:`\mat{A}` and the next :math:`N` rows the sample :math:`\mat{B}`.
+The last :math:`N n_X` rows contain :math:`n_X` copies of :math:`\mat{A}`,
+each with a different column replaced by the corresponding column from :math:`\mat{B}`
+(they are the matrices :math:`\mat{E}^i` from the documentation page of :class:`~openturns.SobolIndicesAlgorithm`).
+
+If *computeSecondOrder* is set to *True* and :math:`n_X = 2`, the input design is the same as in
+the case where *computeSecondOrder* is *False* (see [saltelli2002]_).
+
+If *computeSecondOrder* is set to *True* and :math:`n_X \neq 2`, the input design size is :math:`N(2+2 n_X)`.
+The first :math:`N(2+n_X)` rows are the same as when *computeSecondOrder* is *False*.
+The last :math:`N n_X` rows contain :math:`n_X` copies of :math:`\mat{B}`,
+each with a different column replaced by the corresponding column from :math:`\mat{A}`
+(they are the matrices :math:`\mat{C}^i` from the documentation page of :class:`~openturns.SobolIndicesAlgorithm`).
 
 See also
 --------
@@ -53,6 +91,7 @@ Examples
 --------
 
 Create a sample suitable to estimate first and total order Sobol' indices:
+
 >>> import openturns as ot
 >>> ot.RandomGenerator.SetSeed(0)
 >>> formula = ['sin(pi_*X1)+7*sin(pi_*X2)^2+0.1*(pi_*X3)^4*sin(pi_*X1)']
@@ -63,6 +102,7 @@ Create a sample suitable to estimate first and total order Sobol' indices:
 >>> sample = experiment.generate()
 
 Create a sample suitable to estimate first, total order and second order Sobol' indices:
+
 >>> import openturns as ot
 >>> ot.RandomGenerator.SetSeed(0)
 >>> formula = ['sin(pi_*X1)+7*sin(pi_*X2)^2+0.1*(pi_*X3)^4*sin(pi_*X1)']
